--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,5 +1,5 @@
 header .navbar {
-    background-color: rgba(0, 0, 0, 0.2);
+    /* background-color: rgba(0, 0, 0, 0.2); */
 }
 header .navbar-brand img{
     height: 50px;
@@ -343,8 +343,8 @@ footer .footer-bottom p{
     background-color: #32BEC0;
     border-color: #32BEC0;
     text-transform: uppercase;
-    transition: all 0.5s;
 }
+
 .btn-secondary:hover{
     background-color: #29989a;
     border-color: #29989a;
@@ -358,4 +358,16 @@ footer .footer-bottom p{
 }
 .btn{
     border-radius: 0;
+    transition: all 0.5s;
+}
+.btn-danger{
+    background-color: #DF5C5C;
+    border-color: #DF5C5C;
+}
+.btn-danger:hover{
+    background-color: #c33737;
+    border-color: #c33737;
+}
+.text-danger{
+    color: #DF5C5C;
 }
