--- a/src/admin/style.css
+++ b/src/admin/style.css
@@ -1,6 +1,7 @@
 .header-admin .navbar{
     background-color: #fff;
     border-bottom:1px solid #707070;
+  
 }
 .header-admin .navbar-light .navbar-nav .nav-link{
     color: #000000;
@@ -8,6 +9,7 @@
     font-size: 24px;
     padding: 25px;
     position: relative;
+  
 }
 .header-admin .navbar-light .navbar-nav .nav-link.active::after{
     content: '';
@@ -91,4 +93,172 @@ position: relative;
 .authentication-box{
     height: auto;
     
+}
+.overview-box{
+    border: 1px solid #E4E8EB;
+    border-radius: 15px;
+    padding: 20px;
+    margin-top: 20px;
+}
+.overview-box .overview-item{
+    margin-top: 20px;
+    border: 1px solid #E4E8EB;
+    height: 206px;
+    border-radius: 5px;
+    background-color: #F3F3F3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+}
+.overview-box .overview-item h1{
+    font-weight: 700;
+    font-size: 30px;
+}
+.overview-box .overview-item span{
+    font-size: 16px;
+}
+.overview-box .overview-item p{
+    font-size: 16px;
+    color: #000000;
+}
+.overview-box .overview-item .expired h1, .overview-box .overview-item .expired span{
+    color: #DF5C5C;
+}
+.overview-box .overview-item .unpaid h1, .overview-box .overview-item .unpaid span{
+    color: #426AF7;
+}
+.overview-box .overview-item .paid h1, .overview-box .overview-item .paid span{
+    color: #1E9A8B;
+}
+.overview-box .overview-item .draft h1, .overview-box .overview-item .draft span{
+    color: #9B9B9B;
+}
+.dashbord-box{
+    background-color: #F3F3F3;
+    padding: 25px;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+.carousel-indicators [data-bs-target]{
+    background-color: #7E7E7E;
+    height: 6px;
+    width: 6px;
+    border-radius: 50%;
+    border: none;
+}
+.carousel-indicators .active{
+    background-color: #32BEC0;
+    width: 16px;
+    height: 6px;
+    border-radius: 50px;
+}
+.carousel-indicators{
+    bottom: -25px;
+}
+.Wizard-navigation{
+    -webkit-box-shadow: 3px 0px 20px 0px rgba(0,0,0,0.05);
+-moz-box-shadow: 3px 0px 20px 0px rgba(0,0,0,0.05);
+box-shadow: 3px 0px 20px 0px rgba(0,0,0,0.05);
+background-color: #fff;
+padding: 30px;
+margin-top: 30px;
+border-radius: 15px;
+height: 702px;
+position: relative;
+}
+.Wizard-navigation::after{
+    content: '';
+    background-image: url(../assets/img/lady_in_car.png);
+    max-width: 263px;
+    max-height: 380px;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-size: cover;
+}
+.Wizard-navigation ul{
+    padding: 0;
+    list-style: none;
+}
+.Wizard-navigation ul li a{
+    text-decoration: none;
+    color: #000000;
+}
+.Wizard-navigation ul li .nav-box{
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+.Wizard-navigation ul li .nav-box img{
+    max-width: 65px;
+}
+.Wizard-navigation ul li .nav-box .nav-content{
+    padding-left: 30px;
+}
+.Wizard-navigation ul li .nav-box .nav-content h5{
+    font-weight: 700;
+    font-size: 16px;
+    margin-bottom: 0;
+}
+.Wizard-navigation ul li .nav-box .nav-content p{
+    margin-bottom: 0;
+}
+.Wizard-navigation ul li .nav-box .icon-box{
+    border: #0C4C82 3px solid;
+    border-radius: 15px;
+    color: #22BBB9;
+    width: 58px;
+    height: 58px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+}
+.Wizard-navigation ul li a{
+    opacity: 50%;
+}
+.Wizard-navigation ul li a.active{
+    opacity: 1;
+}
+.payment-box{
+    margin-top: 30px;
+    padding:0 100px;
+}
+.payment-box h1 {
+    font-size: 24px;
+    font-weight: 700;
+}
+.ipay{
+    max-height: 34px;
+}
+.quot{
+    padding: 25px 0;
+}
+.payment-box .nav-tabs .nav-link.active{
+    color: #fff;
+    background-color: #32BEC0;
+    border-color: #32BEC0;
+}
+.payment-box .nav-tabs .nav-link{
+    color: #000000;
+    border: 1px solid #000000;
+    border-radius: 0;
+    font-weight: 700;
+    font-size: 18px;
+}
+.payment-box .nav-tabs{
+    border: none;
+    display: flex;
+    justify-content: space-between;
+}
+.payment-box .list-group-item{
+    border: 1px solid #CED4DA;
+    transition: all 0.5s;
+    margin-bottom: 15px;
+}
+.payment-box .list-group-item:hover{
+    border-color:#F05A28 ;
 }
