--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,395 +1,646 @@
-
 header .navbar {
-    /* background-color: rgba(0, 0, 0, 0.2); */
+  /* background-color: rgba(0, 0, 0, 0.2); */
 }
-header .navbar-brand img{
-    height: 40px;
+.desk_logo {
+  display: none;
+}
+.login_mobile {
+  display: none;
+}
+header .navbar-brand img {
+  height: 40px;
 }
 
-header .navbar-light .navbar-nav .nav-link{
-    font-weight: 700;
-    font-style: normal;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
+header .navbar-light .navbar-nav .nav-link {
+  font-weight: 700;
+  font-style: normal;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
 }
-header .login{   
-    color: rgb(255, 255, 255);
-    line-height: 27px;
-    letter-spacing: 0em;
-    --para-spacing: 0;
-    text-transform: none;
-    --head-indent: 0;
-    --numeric-list-marker: none;
-    list-style-type: none;
-    display: flex;
+header .login {
+  color: rgb(255, 255, 255);
+  line-height: 27px;
+  letter-spacing: 0em;
+  --para-spacing: 0;
+  text-transform: none;
+  --head-indent: 0;
+  --numeric-list-marker: none;
+  list-style-type: none;
+  display: flex;
 }
-header .login i{
-    font-size: 24px;
-
+header .login i {
+  font-size: 24px;
 }
-header .login a{
-    color: #fff;
-    padding:0  5px ;
-    font-size: 19.4649px;
+header .login a {
+  color: #fff;
+  padding: 0 5px;
+  font-size: 19.4649px;
 }
-.btn-check:focus+.btn, .btn:focus{
-    box-shadow: none;
+.btn-check:focus + .btn,
+.btn:focus {
+  box-shadow: none;
 }
-.dropdown-toggle::after{
-    color: white;
+.dropdown-toggle::after {
+  color: white;
 }
 .banner {
-    background-image: url(../img/banner_bg.png);
-    /* height: 100vh; */
-    width: 100%;
-    background-size: cover;
-    position: relative;
+  background-image: url(../img/banner_bg.png);
+  /* height: 100vh; */
+  width: 100%;
+  background-size: cover;
+  position: relative;
 }
-.banner .banner-content h1{
-    font-size: 71.9652px;
-    color: rgb(255, 255, 255);
-    line-height: 86px;
-    letter-spacing: 0em;
-    --para-spacing: 0;
-    text-transform: none;
-    --head-indent: 0;
-    --numeric-list-marker: none;
-    list-style-type: none;
-    font-weight: 700;
+.banner .banner-content h1 {
+  font-size: 71.9652px;
+  color: rgb(255, 255, 255);
+  line-height: 86px;
+  letter-spacing: 0em;
+  --para-spacing: 0;
+  text-transform: none;
+  --head-indent: 0;
+  --numeric-list-marker: none;
+  list-style-type: none;
+  font-weight: 700;
 }
-.banner .banner-content p{
-    font-size: 18.6578px;
-    color: rgb(255, 255, 255);
-    font-weight: 300;
-    line-height: 29px;
-    letter-spacing: 0em;
-    --para-spacing: 0;
-    text-transform: none;
-    --head-indent: 0;
-    --numeric-list-marker: none;
-    list-style-type: none;
+.banner .banner-content p {
+  font-size: 18.6578px;
+  color: rgb(255, 255, 255);
+  font-weight: 300;
+  line-height: 29px;
+  letter-spacing: 0em;
+  --para-spacing: 0;
+  text-transform: none;
+  --head-indent: 0;
+  --numeric-list-marker: none;
+  list-style-type: none;
 }
-.banner img{
-   position: relative;
-   bottom: -75px;
+.banner img {
+  position: relative;
+  bottom: -75px;
 }
-.banner-quote{
-    background-color: #fff;
-    padding: 25px;
-    margin: 0 auto;
-    display: flex;
-    position: relative;
+.banner-quote {
+  background-color: #fff;
+  padding: 25px;
+  margin: 0 auto;
+  display: flex;
+  position: relative;
 }
-.btn-primary{
-    background-color:#EDF0F3 ;
-    font-weight: 700;
-    font-style: normal;
-    color: rgb(23, 190, 187);
-    text-decoration: none;
-    border: none;
-    border-radius: 15px;
-    padding: 15px;
-    font-size: 20px;
-    transition: all 0.5s;
+.btn-primary {
+  background-color: #edf0f3;
+  font-weight: 700;
+  font-style: normal;
+  color: rgb(23, 190, 187);
+  text-decoration: none;
+  border: none;
+  border-radius: 15px;
+  padding: 15px;
+  font-size: 20px;
+  transition: all 0.5s;
 }
-.btn-primary:hover{
-   color:#EDF0F3 ;
-   background-color: rgb(23, 190, 187);
+.btn-primary:hover {
+  color: #edf0f3;
+  background-color: rgb(23, 190, 187);
 }
-.section-title{
-    text-align: center;
+.section-title {
+  text-align: center;
 }
-.section-title span{
-    color: #000;
-    font-size: 14px;
-    font-weight: 700;
+.section-title span {
+  color: #00000066;
+  font-size: 14px;
+  font-weight: 700;
 }
-.section-title h2{
-    font-size: 42px;
-    color: rgb(23, 190, 187);
-    font-weight: 700;
+.section-title h2 {
+  font-size: 42px;
+  color: rgb(23, 190, 187);
+  font-weight: 700;
 }
-.section-title h2 span{
-    color: rgb(12, 76, 130);
-    font-size: 42px;
+.section-title h2 span {
+  color: rgb(12, 76, 130);
+  font-size: 42px;
 }
-.section-title.light span{
-    color: #fff;
+.section-title.light span {
+  color: #fff;
 }
-.section-title.light h2{
-    color: rgb(34, 187, 185);
+.section-title.light h2 {
+  color: rgb(34, 187, 185);
 }
-.section-title.light h2 span{
-    color: #fff;
+.section-title.light h2 span {
+  color: #fff;
 }
-.box-content{
-    padding: 15px;
+.box-content {
+  padding: 15px;
 }
-.box-content p{
-    color: rgb(12, 76, 130);
+.box-content p {
+  color: rgb(12, 76, 130);
 }
-.autogen{
-    background-image: url(../img/horizontal_gradient_background.png);
-    position: relative;
+.autogen {
+  background-image: url(../img/horizontal_gradient_background.png);
+  position: relative;
 }
-.autogen::after{
-    content: '';
-    background-image: url(../img/eautogen_flaticon.png);
-    height: 900px;
-    width: 900px;
-    position: absolute;
-    top: 50px;
-    right: 0;
-    opacity: 0.1;
+.autogen::after {
+  content: "";
+  background-image: url(../img/eautogen_flaticon.png);
+  height: 900px;
+  width: 900px;
+  position: absolute;
+  top: 50px;
+  right: 0;
+  opacity: 0.1;
 }
-.autogen strong{
-    font-size: 14px;
-    color: #fff;
+.autogen strong {
+  font-size: 14px;
+  color: #fff;
 }
-.autogen p{
-    color: #fff;
-    font-size: 12px;
+.autogen p {
+  color: #fff;
+  font-size: 12px;
+}
+.autogen .icon-box img {
+  max-height: 82px;
+}
+.autogen .icon-box {
+  display: flex;
+  align-items: center;
+  max-width: 350px;
+  padding: 15px 0;
+}
+.autogen .icon-box .icon-content {
+  padding-left: 50px;
+}
+.autogen .section-img {
+  position: absolute;
+  right: 0px;
+  bottom: 50px;
+  max-height: 750px;
+  width: 50%;
+  z-index: 9;
+}
+.how_work {
+  box-shadow: 0 2px 8px rgb(14 19 24 / 7%);
+}
+.how_work strong {
+  font-size: 14px;
+  text-align: center;
+  justify-content: center;
+}
+.how_work p {
+  font-size: 12px;
+  text-align: center;
+}
+.workshops {
+  background-image: url(../img/locate_us_bg.png);
+  position: relative;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
+}
+.workshops::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  top: 0;
+  left: 0%;
+  z-index: -1;
+}
+.workshops .workshop-box {
+  border: 1px solid #000;
+  position: relative;
+  z-index: 1;
+  margin: 20px;
+  height: 550px;
+  background-color: #fff;
+  padding: 10px;
+  /* padding-bottom: 45px; */
+  text-align: center;
+}
+.faq,
+footer {
+  background-image: url(../img/banner_bg.png);
+  /* height: 100vh; */
+  width: 100%;
+  background-size: cover;
+  position: relative;
+}
+.faq .faq-box {
+  border: 1px solid #fff;
+  padding: 25px;
+  color: #fff;
+}
+footer img {
+  max-width: 250px;
+  margin: auto;
+  display: flex;
+}
+footer {
+  color: #fff;
+}
+footer p {
+  display: flex;
+  align-items: flex-start;
+}
+footer p i {
+  padding-right: 25px;
+}
+footer ul {
+  padding: 0;
+  list-style: none;
+}
+footer ul li a.nav-link {
+  color: #fff;
+  text-decoration: none;
+  font-size: 14px;
+}
+footer .footer-bottom {
+  border-top: 1px solid #fff;
+  padding: 15px 0;
+  text-align: center;
+  display: flex;
+}
+footer .footer-bottom p {
+  margin: 0 auto;
+}
+.quot,
+.customer_details {
+  padding: 25px;
+}
+.autogen.whatincluded {
+  background: none;
+}
+.autogen.whatincluded strong,
+.autogen.whatincluded p {
+  color: #000;
+}
+.autogen.whatincluded strong span {
+  color: rgb(34, 187, 185);
+}
+.box-gray {
+  border: 1px solid rgb(245, 246, 248);
+}
+.box-gray .box-head {
+  background-color: rgb(245, 246, 248);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 25px;
+}
+.ipay88 {
+  background-color: rgb(253, 100, 4);
+  color: #fff;
+  border-radius: 5px;
+}
+.box-gray .box-content {
+  padding: 25px;
+}
+.box-gray .box-content .payment_methods {
+  border: 1px solid rgb(245, 246, 248);
+  padding: 15px;
+}
+.box-gray .box-content .payment_methods p {
+  border-bottom: 1px solid rgb(245, 246, 248);
+}
+.box-gray .box-content .payment_methods img {
+  max-height: 25px;
+}
+.authentication-content {
+  background-image: url(../img//banner_bg.png);
+  height: 130vh;
+  width: 100%;
+  background-size: cover;
+  background-position: right;
+  display: flex;
+  padding: 0 80px;
+  position: relative;
+}
+.authentication-content h1 {
+  font-size: 48px;
+  color: #fff;
+  font-weight: 700;
+}
+.authentication-content h1 span {
+  color: #084b83;
+  display: flex;
+}
+.authentication-content p {
+  color: #fff;
+}
+.authentication-content img {
+  width: 230px;
+  position: absolute;
+  top: 80px;
+}
+.authentication-box {
+  max-width: 855px;
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  margin-top: 90px;
+}
+.authentication-box_otp {
+  max-width: 855px;
+  display: block;
+  margin: 0 auto;
+  position: relative;
 
+  display: flex;
+  align-items: center;
+  margin-top: -190px;
 }
-.autogen .icon-box img{
-    max-height: 82px;
+.authentication-box_otp .authentication-inputs {
+  width: 100%;
+  margin-bottom: 15%;
 }
-.autogen .icon-box{
-    display: flex;
-    align-items: center;
-    max-width: 350px;
-    padding: 15px 0;
+.authentication-box_otp h1 {
+  font-size: 24px;
+  font-weight: 700;
 }
-.autogen .icon-box .icon-content{
-    padding-left: 50px;
+.authentication-box_otp p a {
+  font-weight: 700;
+  color: #32bec0;
+  text-decoration: none;
 }
-.autogen .section-img{
-    position: absolute;
-    right: 0px;
-    bottom: 50px;
-    max-height: 750px;
-    width: 50%;
-    z-index: 9;
+.authentication-box_otp img {
+  max-width: 370px;
+  margin: 0 auto;
+  position: absolute;
+  bottom: -250px;
+  left: 0;
+  right: 0;
 }
-.how_work{
-    box-shadow: 0 2px 8px rgb(14 19 24 / 7%);
+.authentication-box .authentication-inputs {
+  width: 100%;
+  margin-bottom: 15%;
 }
-.how_work strong{
-    font-size: 14px;
-    text-align: center;
+.authentication-box h1 {
+  font-size: 24px;
+  font-weight: 700;
 }
-.how_work p{
-    font-size: 12px;
-    text-align: center;
+.authentication-box p a {
+  font-weight: 700;
+  color: #32bec0;
+  text-decoration: none;
 }
-.workshops{
-    background-image: url(../img/locate_us_bg.png);
-    position: relative;
-    background-size: cover;
-    position: relative;
-    z-index: 1;
+.authentication-box img {
+  max-width: 370px;
+  margin: 0 auto;
+  position: absolute;
+  bottom: -250px;
+  left: 0;
+  right: 0;
 }
-.workshops::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
-    top:0;
-    left: 0%;
-    z-index: -1;
+.btn-secondary {
+  background-color: #32bec0;
+  border-color: #32bec0;
+  text-transform: uppercase;
+  transition: all 0.5s;
 }
-.workshops .workshop-box{
-    border: 1px solid #000;
-    position: relative;
-    z-index: 1;
-    background-color: #fff;
-    padding: 15px;
-    text-align: center;
+.btn-secondary:hover {
+  background-color: #29989a;
+  border-color: #29989a;
 }
-.faq,footer{
-    background-image: url(../img/banner_bg.png);
-    /* height: 100vh; */
-    width: 100%;
-    background-size: cover;
-    position: relative;
+.btn-outline-secondary {
+  border-color: #32bec0;
 }
-.faq .faq-box{
-    border: 1px solid #fff;
-    padding: 25px;
-    color: #fff;
+.btn-outline-secondary:hover {
+  background-color: #29989a;
+  border-color: #29989a;
 }
-footer img{
-    max-width: 250px;
-    margin:  auto;
-    display: flex;
+.claim_img {
+  display: none;
 }
-footer{
-    color: #fff;
-}
-footer p{
-    display: flex;
-    align-items: flex-start;
-}
-footer p i{
-    padding-right: 25px;
-}
-footer ul{
-    padding: 0;
-    list-style: none;
-}
-footer ul li a.nav-link{
-    color: #fff;
-    text-decoration: none;
-    font-size: 14px;
-}
-footer .footer-bottom{
-    border-top: 1px solid #fff;
-    padding: 15px 0;
-    text-align: center; 
-    display: flex;
-}
-footer .footer-bottom p{
-    margin: 0 auto;
-   
-}
-.quot,.customer_details{
-    padding: 25px;
-}
-.autogen.whatincluded{
-    background: none;
-}
-.autogen.whatincluded strong,.autogen.whatincluded p{
-    color: #000;
-}
-.autogen.whatincluded strong span{
-    color:rgb(34, 187, 185);
-}
-.box-gray{
-    border: 1px solid rgb(245,246,248);
-}
-.box-gray .box-head{
-    background-color: rgb(245,246,248);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 25px;
-}
-.ipay88{
-    background-color: rgb(253,100,4);
-    color: #fff;
-    border-radius: 5px;
-}
-.box-gray .box-content{
-    padding: 25px;
-}
-.box-gray .box-content .payment_methods{
-    border: 1px solid rgb(245,246,248);
-    padding: 15px;
-}
-.box-gray .box-content .payment_methods p{
-    border-bottom:1px solid rgb(245,246,248) ;
-}
-.box-gray .box-content .payment_methods img{
-    max-height: 25px;
-}
-.authentication-content{
-    background-image: url(../img//banner_bg.png);
-    height: 180vh;
-    width: 100%;
-    background-size: cover;
-    background-position: right;
-    display: flex;
-    padding: 0 80px;
-    position: relative;
-}
-.authentication-content h1{
-    font-size: 48px;
-    color: #fff;
-    font-weight: 700;
-}
-.authentication-content h1 span{
-    color: #084B83;
-    display: flex;
-}
-.authentication-content p{
-    color: #fff;
-}
-.authentication-content img{
-    width: 230px;
-    position: absolute;
-    top: 80px;
-}
-.authentication-box{
-    max-width: 855px;
-    display: block;
-    margin: 0 auto;
-    position: relative;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    margin-top: 90px;
-}
-.authentication-box .authentication-inputs{
-    width: 100%;
-    margin-bottom: 15%;
-}
-.authentication-box h1{
-    font-size: 24px;
-    font-weight: 700;
-}
-.authentication-box p a{
-    font-weight: 700;
-    color: #32BEC0;
-    text-decoration: none;
-}
-.authentication-box img{
-    max-width: 370px;
-    margin: 0 auto;
-    position: absolute;
-    bottom: -250px;
-    left: 0;
-    right: 0;
-}
-.btn-secondary{
-    background-color: #32BEC0;
-    border-color: #32BEC0;
-    text-transform: uppercase;
-    transition: all 0.5s;
-}
-.btn-secondary:hover{
-    background-color: #29989a;
-    border-color: #29989a;
-}
-.btn-outline-secondary{
-    border-color: #32BEC0;
-}
-.btn-outline-secondary:hover{
-    background-color: #29989a;
-    border-color: #29989a;
-}
-
 
 
 
 /* mobile view */
-@media screen and (min-width: 320px) and (max-width: 480px){
-    header .navbar-brand img {
-        height: 40px;
-    }
-    .banner .banner-content h1{
-        font-size: calc(20px);
-        margin: 0 auto;
-    }
-    header .login{
-        /* display: block; */
-    }
-    .banner{
-        background-position:right;
-    }
-    .autogen .section-img{
-        display: none;
-    }
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  header .navbar-brand img {
+    height: 40px;
+  }
+  .banner .banner-content h1 {
+    font-size: calc(20px);
+    margin: 0 auto;
+  }
+  header .login {
+    display: flex;
+    color: black;
+  }
+  header .login a {
+    color: black;
+  }
+  .login_mobile {
+    display: block;
+  }
+  .banner {
+    background-position: right;
+  }
+  .autogen .section-img {
+    display: none;
+  }
+  .banner img {
+    bottom: -35px;
+  }
+  .banner-content {
+    margin-bottom: -100px;
+  }
+  .logo {
+    display: none;
+  }
+  .desk_logo {
+    display: block;
+    height: 40px;
+  }
+  header .navbar {
+    background-color: white;
+  }
+  header .navbar-light .navbar-nav .nav-link {
+    color: black;
+  }
+  i.fa-regular.fa-circle-user {
+    color: black !important;
+  }
+
+  .section-title h2 {
+    font-size: 30px;
+    text-align: center;
+  }
+  .section-title h2 span {
+    font-size: 26px;
+    text-align: center;
+  }
+  .arrow_img {
+    display: none;
+  }
+  .hiw_img {
+    height: 176px;
+    width: 176px;
+    margin: auto;
+    justify-content: center;
+    display: flex;
+  }
+
+  .how_work strong {
+    font-size: 18px;
+    text-align: center;
+    width: 100%;
+    margin: auto;
+    justify-content: center;
+    font-weight: bold;
+  }
+  .how_work p {
+    width: 80%;
+    margin: auto;
+  }
+  .faq,
+  footer {
+    background-position: right;
+  }
+  .faq .faq-box {
+    border: none;
+  }
+  .claim_img {
+    display: block;
+  }
+  .desk_claim_img {
+    display: none;
+  }
+
+  /* quotaion page  */
+  .autogen .icon-box {
+    display: grid;
+  }
+  .autogen .icon-box .icon-content{
+    padding-left: 10px;
+  }
+  .include_auto{
+    width: 85%;
+    margin: 0 auto;
+  }
+
+
+  /* login */
+  .authentication-box {
+    height: auto;
+    width: 85%;
+}
+.authentication-box_otp{
+  width: 85%;
+  margin-top: 90px;
+}
 }
 
+@media screen and (min-device-width: 540px) and (max-device-width: 720px) {
+  .desk_logo {
+    display: none;
+    height: 40px;
+  }
+  header .navbar-brand img {
+    height: 55px;
+  }
+  .banner .banner-content h1 {
+    font-size: calc(20px);
+    margin: 0 auto;
+  }
+  header .login {
+    display: flex;
+    color: black;
+  }
+  header .login a {
+    color: black;
+  }
+  .login_mobile {
+    display: block;
+  }
+  .banner {
+    background-position: right;
+  }
+  .autogen .section-img {
+    display: none;
+  }
+  .banner img {
+    bottom: -35px;
+  }
+  .banner-content {
+    margin-bottom: -100px;
+  }
+  .logo {
+    display: none;
+  }
+  .desk_logo {
+    display: block;
+    height: 40px;
+  }
+  header .navbar {
+    background-color: white;
+  }
+  header .navbar-light .navbar-nav .nav-link {
+    color: black;
+  }
+  i.fa-regular.fa-circle-user {
+    color: black !important;
+  }
 
+  .section-title h2 {
+    font-size: 30px;
+    text-align: center;
+  }
+  .section-title h2 span {
+    font-size: 30px;
+    text-align: center;
+  }
+  .arrow_img {
+    display: none;
+  }
+  .hiw_img {
+    height: 176px;
+    width: 176px;
+    margin: auto;
+    justify-content: center;
+    display: flex;
+  }
+
+  .how_work strong {
+    font-size: 18px;
+    text-align: center;
+    width: 100%;
+    margin: auto;
+    justify-content: center;
+    font-weight: bold;
+  }
+  .how_work p {
+    width: 80%;
+    margin: auto;
+  }
+  .faq,
+  footer {
+    background-position: right;
+  }
+  .faq .faq-box {
+    border: none;
+  }
+  .claim_img {
+    display: block;
+  }
+  .desk_claim_img {
+    display: none;
+  }
+
+  /* quotaion page  */
+  .autogen .icon-box {
+    display: grid;
+  }
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .desk_logo {
+    display: none;
+    height: 40px;
+  }
+  .banner .banner-content h1 {
+    font-size: 40px;
+    line-height: 40px;
+  }
+}
