--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -315,7 +315,7 @@ footer .footer-bottom p {
 }
 .authentication-content {
   background-image: url(../img//banner_bg.png);
-  height: 130vh;
+  height: 100vh;
   width: 100%;
   background-size: cover;
   background-position: right;
@@ -345,9 +345,9 @@ footer .footer-bottom p {
   display: block;
   margin: 0 auto;
   position: relative;
-  height: 100vh;
-  display: flex;
-  align-items: center;
+  height: 70vh;
+  /* display: flex;
+  align-items: center; */
   margin-top: 90px;
 }
 .authentication-box_otp {
@@ -400,7 +400,7 @@ footer .footer-bottom p {
   max-width: 370px;
   margin: 0 auto;
   position: absolute;
-  bottom: -250px;
+  bottom: -5%;
   left: 0;
   right: 0;
 }
